--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -30,4 +30,22 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+} */
+/* .hero > * {
+  margin-top: 1.5rem;
+} */
+
+.sub-heading {
+  font-size: 1.5rem;
+  color: #bc6c25;
+  letter-spacing: .15rem;
+  font-weight: 500;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.toggle{
+  display: hidden
+}
+.toggle:hover{
+  display:block
 }
